--- a/myApp/src/pages/details/details.html
+++ b/myApp/src/pages/details/details.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the AddEventPage page.
+  Generated template for the DetailsPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Adicionar Evento</ion-title>
+    <ion-title>Details</ion-title>
   </ion-navbar>
 
 </ion-header>
